# hw_factorization_machine

./: .gitmodules  CMakeLists.txt  DataReader.hpp  README.md  README.mp  data.hpp  main.cpp  shuffler.cpp  test.cpp
factorization_machine/: CMakeLists.txt
factorization_machine/include/factorization_machine/: FactorizationMachine.hpp
factorization_machine/src/: FactorizationMachine.cpp
wrappers/: CMakeLists.txt  PyFactorizationMachine.cpp
